# qtacrylicmaterial

./: .gitignore  CMakeLists.txt  LICENSE  MainWindow.qml  README.md  app.rc  main.cpp  main.qml  qgfxshaderbuilder.cpp  qgfxshaderbuilder_p.h  qgfxsourceproxy.cpp  qgfxsourceproxy_p.h  qtacrylic.qrc  qtacrylicmaterial.qrc  quickacrylicitem.cpp  quickacrylicitem.h  quickacrylicitem_p.h  quickacrylicmaterial.cpp  quickacrylicmaterial.h  quickacrylicmaterial_p.h  quickblend.cpp  quickblend.h  quickblend_p.h  quickdesktopwallpaper.cpp  quickdesktopwallpaper.h  quickdesktopwallpaper_p.h  quickdesktopwallpaper_win.cpp  quickgaussianblur.cpp  quickgaussianblur.h  quickgaussianblur_p.h
demo/: CMakeLists.txt  MainWindow.qml  demo.manifest  demo.rc  main.cpp
src/: CMakeLists.txt  plugin.cpp  qgfxshaderbuilder.cpp  qgfxshaderbuilder_p.h  qgfxsourceproxy.cpp  qgfxsourceproxy_p.h  qtacrylicmaterial.qrc  qtacrylicmaterial.rc  qtacrylicmaterial_global.h  qtacrylicmaterial_mac.qrc  qtacrylicmaterialplugin.cpp  qtacrylicmaterialplugin.h  quickacrylicmaterial.cpp  quickacrylicmaterial.h  quickacrylicmaterial_linux.cpp  quickacrylicmaterial_mac.mm  quickacrylicmaterial_p.h  quickacrylicmaterial_win.cpp  quickblend.cpp  quickblend.h  quickblend_p.h  quickdesktopwallpaper.cpp  quickdesktopwallpaper.h  quickdesktopwallpaper_linux.cpp  quickdesktopwallpaper_mac.mm  quickdesktopwallpaper_p.h  quickdesktopwallpaper_win.cpp  quickgaussianblur.cpp  quickgaussianblur.h  quickgaussianblur_p.h
